BugFix #38. title align center

--- a/src/Components/components.scss
+++ b/src/Components/components.scss
@@ -3,6 +3,7 @@
   background-color: map-get($m-colors, "primary");
   color: #fff;
   border-radius: 0px 0px 47px 0px;
+  text-align: center;
   h1 {
     color: #fff;
     font-size: 2.8rem;
